# avr-cmake

./: README.md
cmake/: avr.cmake  dwtk.cmake
example/: CMakeLists.txt  main.c
